@@ -77,6 +77,7 @@ VERSION 2.6-Beta 1
       "1.2 GB free" is shown instead of "85% used"; thicker capacity bar.
 
   BUGFIXES:
+    * Fix transcoding with ffmpeg >= 0.10; patch by Julian Simioni.
     * Fix crash on start when Qt is build with debugging assertions. (BR 285720)
     * Fix URLs in MP3tunes, gpodder.net and Last.fm config dialogs. (BR 299088)
     * Fix drag & drop in playlist layout editor, filename layout editor and
